# aptx

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
aptx/: __init__.py  cli.py
aptx/core/: __init__.py  config.py  database.py  exceptions.py  logger.py  pipeline.py  rate_limiter.py  scope.py  stages.py
aptx/data_feeds/: __init__.py  ingestor.py  parsers.py  sources.py
aptx/intelligence/: __init__.py  classifier.py  engine.py  learning.py  normalizer.py
aptx/plugins/: __init__.py  loader.py  sdk.py
aptx/plugins/examples/: custom_vuln.py
aptx/recon/: __init__.py  base.py  passive.py  port_scan.py  subdomain.py  web_discovery.py
aptx/reporting/: __init__.py  cvss.py  generator.py
aptx/tools/: __init__.py  amass.py  base.py  ffuf.py  httpx.py  nikto.py  nmap.py  nuclei.py  sqlmap.py  subfinder.py
aptx/ui/: __init__.py  app.py
aptx/vulnerabilities/: __init__.py  auth_bypass.py  base.py  command_injection.py  file_upload.py  idor.py  misconfig.py  open_redirect.py  sqli.py  ssrf.py  xss.py
config/: default.yaml
docs/: architecture.md  legal-usage.md  user-manual.md
scripts/: check_tools.py  download_wordlists.sh  install.sh
tests/: __init__.py  conftest.py  test_core_config.py  test_core_database.py  test_core_pipeline.py  test_core_scope.py  test_data_feeds.py  test_integration.py  test_recon.py  test_vulnerabilities.py
